recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:14: error: not found: type double
    i asInstanceOf[double]
                   ^Koch:15: error: not found: value snowsSide
  snowsSide
  ^